src/objects/Voucher_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <label>Voucher Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Voucher_Activity_Action__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>Holiday Return</fullName>
                </value>
                <value>
                <fullName>Voucher Return</fullName>
                </value>
                <value>
                <fullName>Voucher Resend - Full Pack</fullName>
                </value>
                <value>
                <fullName>Voucher Resend - Part Pack</fullName>
                </value>
                <value>
                <fullName>Voucher Send - Part Pack</fullName>
                </value>
                <value>
                <fullName>Voucher Return without Refund</fullName>
                </value>
                <value>
                <fullName>Outside of Policy</fullName>
                </value>
                <value>
                <fullName>Exceeded Policy</fullName>
                </value>
                <value>
                <fullName>Pre-notification of Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>Date refund was approved and processed</description>
        <inlineHelpText>Date refund was approved and processed</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Voucher_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Vouchers_Received__c</fullName>
        <inlineHelpText>For vouchers received, enter the date the vouchers have actually been received (affects vouchers in hand)</inlineHelpText>
        <label>Date Vouchers Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deferred_Asset_Value__c</fullName>
        <label>Deferred Asset Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecuteValidationRules__c</fullName>
        <description>Execute validation rules only for records created after go live date.</description>
        <formula>IF ( 
ISBLANK($Setup.Configuration__c.VoucherRefundGoLiveDate__c), 
TRUE, 
DATEVALUE(CreatedDate) &gt;= $Setup.Configuration__c.VoucherRefundGoLiveDate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Execute Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfilled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the person who fulfilled the voucher activity details and submitted refund for approval or processed refund if the refund value is below threshold.</description>
        <inlineHelpText>The name of the person who fulfilled the voucher activity details and submitted refund for approval or processed refund if the refund value is below threshold.</inlineHelpText>
        <label>Fulfilled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Voucher_Activities_Fulfilled_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfilled_Date__c</fullName>
        <label>Fulfilled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Vouchers_Calc__c</fullName>
        <label>Number of Vouchers Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vouchers__c</fullName>
        <formula>IF(Number_of_Vouchers_Calc__c &gt; 0,Number_of_Vouchers_Calc__c  ,IF(OR(ispickval( Adjustment_Type__c,&quot;Voucher Return&quot;),ispickval( Adjustment_Type__c,&quot;Holiday Return&quot;),ispickval( Adjustment_Type__c,&quot;Voucher Resend - Part Pack&quot;),ispickval( Adjustment_Type__c,&quot;Voucher Send - Part Pack&quot;),ispickval( Adjustment_Type__c,&quot;Goodwill&quot;)),(End_Date__c - Start_Date__c)+1,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Vouchers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_balance_to_from_customer__c</fullName>
        <formula>Subscription__r.Outstanding_Balance_to_from_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Balance To/From Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>    
    <fields>
        <fullName>Overlaps_Other_Voucher_Activity__c</fullName>
        <label>Overlaps Other Voucher Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <formula>IF(
	OR(
		ISPICKVAL(Adjustment_Type__c, &quot;Holiday Return&quot;), 
		ISPICKVAL(Adjustment_Type__c, &quot;Voucher Return&quot;)
	), 
	Voucher_Value__c,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Due__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if a monetary refund is due to the subscriber</inlineHelpText>
        <label>Refund Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund_Method__c</fullName>
        <label>Refund Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Cheque not created</fullName>
                </value>
                <value>
                <fullName>System created cheque</fullName>
                </value>
                <value>
                <fullName>Manual created cheque</fullName>
                </value>
                <value>
                <fullName>Refunded to Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Status__c</fullName>
        <description>Status of a refund</description>
        <inlineHelpText>Status of a refund</inlineHelpText>
        <label>Refund Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Processed</fullName>
                </value>
                <value>
                <fullName>Waiting For Approval</fullName>
                </value>
                <value>
                <fullName>Pending</fullName>
                </value>
                <value>
                <fullName>Partially Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resend_Letter_Version__c</fullName>
        <description>Letter version for resends. If VA Start Date = Sub Start Date set to SS, else SD</description>
        <formula>IF ( AND( Start_Date__c = Subscription__r.Start_Date__c, ISPICKVAL (Adjustment_Type__c, &quot;Voucher Resend - Full Pack&quot;)),&quot;SS&quot;, &quot;SD&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Letter version for resends. If VA Start Date = Sub Start Date set to SS, else SD</inlineHelpText>
        <label>Resend Letter Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Voucher Activities</relationshipLabel>
        <relationshipName>Voucher_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Voucher_Activity_Action__c</fullName>
        <inlineHelpText>Select the type of voucher activity action you are entering</inlineHelpText>
        <label>Voucher Activity Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Vouchers Sent</fullName>
                </value>
                <value>
                <fullName>Vouchers Received</fullName>
                </value>
                <value>
                <fullName>Vouchers Sent Back To Customers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voucher_Validity_in_Weeks_Calc__c</fullName>
        <label>Voucher Validity in Weeks Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voucher_Validity_in_Weeks__c</fullName>
        <formula>IF(Voucher_Validity_in_Weeks_Calc__c &gt; 0, Voucher_Validity_in_Weeks_Calc__c ,FLOOR(((End_Date__c-Start_Date__c)+1)/7)+((MOD(((End_Date__c-Start_Date__c)+1),7))/10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Validity in Weeks</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voucher_Value_Calc__c</fullName>
        <label>Voucher Value Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voucher_Value__c</fullName>
        <description>Currency value of voucher adjustment.</description>
        <formula>IF(Voucher_Value_Calc__c &gt; 0,Voucher_Value_Calc__c,
IF(
  OR(ISBLANK(Subscription__r.Low_Start_End_Date__c), 
     Start_Date__c &gt; Subscription__r.Low_Start_End_Date__c
  ),
  (Subscription__r.Weekly_Price__c / 7)*((End_Date__c - Start_Date__c) + 1),
  
  IF(AND(Start_Date__c &lt;= Subscription__r.Low_Start_End_Date__c, End_Date__c &gt; Subscription__r.Low_Start_End_Date__c), 
    ((Subscription__r.Low_Start_End_Date__c - Start_Date__c)+1)*(Subscription__r.Low_Start_Weekly_Price__c/7)
    +((End_Date__c - Subscription__r.Low_Start_End_Date__c)*(Subscription__r.Weekly_Price__c / 7))
    ,(Subscription__r.Low_Start_Weekly_Price__c / 7)*((End_Date__c - Start_Date__c) + 1)
    
  )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Currency value of voucher adjustment.</inlineHelpText>
        <label>Voucher Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Warning_Message__c</fullName>
        <description>Warning message to be showed in VoucherActivityNotificationBanner</description>
        <formula>If( 
  ISPICKVAL(Adjustment_Type__c, 'Holiday Return'), if (
  End_Date__c - Start_Date__c &gt; 42 &amp;&amp; Subscription__r.Subscription_Duration_Number__c = 52,
  $Label.Duration_Exceeds_6_Weeks,
  if (
    End_Date__c - Start_Date__c &gt; 21 &amp;&amp; Subscription__r.Subscription_Duration_Number__c = 26,
    $Label.Duration_Exceeds_3_Weeks,
    &apos;&apos;
  )
),
''
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warning Message</label>
        <type>Text</type>
    </fields>
    <label>Voucher Activity</label>
    <nameField>
        <displayFormat>VA-{0000000000}</displayFormat>
        <label>Voucher Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voucher Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Voucher_Received_mandatory</fullName>
        <active>true</active>
        <description>Date Voucher Received is mandatory for Holiday Return activity type.</description>
        <errorConditionFormula>AND(ISPICKVAL(Adjustment_Type__c,&apos;Holiday Return&apos;), ISBLANK( Date_Vouchers_Received__c ))</errorConditionFormula>
        <errorDisplayField>Date_Vouchers_Received__c</errorDisplayField>
        <errorMessage>Date Voucher Received is mandatory for Holiday Return voucher activity type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_26_Week_Validation</fullName>
        <active>true</active>
        <description>Validation for 26 week sub full pack resends</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;TMG System&quot;, 
ISPICKVAL(Adjustment_Type__c, &quot;Voucher Resend - Full Pack&quot;), 
AND(ISPICKVAL(Subscription__r.Subscription_Duration_Picklist__c, &quot;26&quot;)), 
AND (End_Date__c &lt;&gt; Subscription__r.Voucher_Pack_1_End_Date__c , 
End_Date__c &lt;&gt; Subscription__r.Voucher_Pack_2_End_Date__c ))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date must be the same as the listed voucher pack date on the sub</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Full_Resends_end_date_validation</fullName>
        <active>true</active>
        <description>Full resend end date should be the same as the batch start date for standard subs</description>
        <errorConditionFormula>AND(
   $Profile.Name &lt;&gt; &quot;TMG System&quot;,
   ISPICKVAL(Adjustment_Type__c, &quot;Voucher Resend - Full Pack&quot;),
   Subscription__r.Subscription_Duration_Number__c == 52,
   AND(
       End_Date__c &lt;&gt; Subscription__r.Voucher_Pack_1_End_Date__c,
       End_Date__c &lt;&gt; Subscription__r.Voucher_Pack_2_End_Date__c,
       End_Date__c &lt;&gt; Subscription__r.Voucher_Pack_3_End_Date__c,
       End_Date__c &lt;&gt; Subscription__r.Voucher_Pack_4_End_Date__c
   )
)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date of a full pack resend should adhere to the batch end date of the subscription</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Full_Resends_start_date_validation</fullName>
        <active>true</active>
        <description>Full resend start date should be the same as the batch start date for standard subs</description>
        <errorConditionFormula>AND(
   $Profile.Name &lt;&gt; &quot;TMG System&quot;, 
   ISPICKVAL(Adjustment_Type__c, &quot;Voucher Resend - Full Pack&quot;),
   Subscription__r.Subscription_Duration_Number__c == 52,
   AND(
      Start_Date__c &lt;&gt; Subscription__r.Voucher_Pack_1_Start_Date__c,
      Start_Date__c &lt;&gt; Subscription__r.Voucher_Pack_2_Start_Date__c,
      Start_Date__c &lt;&gt; Subscription__r.Voucher_Pack_3_Start_Date__c,
      Start_Date__c &lt;&gt; Subscription__r.Voucher_Pack_4_Start_Date__c
   )
)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start date of a full pack resend should adhere to the batch start date of the subscription</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Holiday_Return_VA_for_Deceased_Customer</fullName>
        <active>true</active>
        <description>Holiday Return VA cannot be created for a Deceased Customer.</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Adjustment_Type__c, &apos;Holiday Return&apos;),
    ISPICKVAL(Subscription__r.Subscription_Status__c, &apos;Cancelled&apos;),
    ISPICKVAL(Subscription__r.Cancellation_Reason__c, &apos;Deceased&apos;)
)</errorConditionFormula>
        <errorMessage>Holiday Return VA cannot be created for a Deceased Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Record_If_Refund_Processed</fullName>
        <active>true</active>
        <description>Prevent record saving if Refund status is &apos;Processed&apos; for Holiday Return Voucher Activities</description>
        <errorConditionFormula>AND(ISPICKVAL(Refund_Status__c, &apos;Processed&apos;),
OR(ISCHANGED(Adjustment_Type__c),
ISCHANGED(Date_Vouchers_Received__c),
ISCHANGED(End_Date__c),
ISCHANGED(Start_Date__c),
ISCHANGED(Subscription__c),
ISCHANGED(Voucher_Activity_Action__c))
)</errorConditionFormula>
        <errorMessage>Voucher refund already processed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Validation_26_week</fullName>
        <active>true</active>
        <description>voucher date validation for 26 week full pack resends</description>
        <errorConditionFormula>AND(
   $Profile.Name &lt;&gt; &quot;TMG System&quot;, 
   ISPICKVAL(Adjustment_Type__c, &quot;Voucher Resend - Full Pack&quot;), 
   Subscription__r.Subscription_Duration_Number__c == 26, 
   AND(ISPICKVAL(Subscription__r.Subscription_Duration_Picklist__c, &quot;26&quot;)), 
   AND(
      Start_Date__c &lt;&gt; Subscription__r.Voucher_Pack_1_Start_Date__c, 
      Start_Date__c &lt;&gt; Subscription__r.Voucher_Pack_2_Start_Date__c
   ) 
)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The Start date must match the voucher pack dates on the Subscription</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Voucher_Activity_Length_More_Than_6_week</fullName>
        <active>false</active>
        <description>Voucher Activity of Type Holiday Return period between Start Date and End Date should be less than 6 weeks</description>
        <errorConditionFormula>AND(
    End_Date__c - Start_Date__c &gt; 42,
    ISPICKVAL(Adjustment_Type__c, &apos;Holiday Return&apos;),
    ExecuteValidationRules__c
)</errorConditionFormula>
        <errorMessage>Voucher Refund does not comply with Holiday Voucher Refund Policy because is longer than 6 weeks.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Voucher_Adjustment_Creation_Sub_Status</fullName>
        <active>true</active>
        <description>This Validation Rule prevents the user from creating a Voucher Adjustment unless the associated Subscription Status is Pending, Active, In Renewal, Lapsed and Pending Cancellation.
SMS-93: Changed to vouchers sent only</description>
        <errorConditionFormula>IF(OR($Profile.Name = &quot;TMG System&quot;, 
      $Profile.Name =&quot;TMG Subs Administrator&quot;), false, 
IF(OR(
ISPICKVAL(Subscription__r.Subscription_Status__c , &quot;Pending&quot;), ISPICKVAL(Subscription__r.Subscription_Status__c , &quot;Active&quot;), ISPICKVAL(Subscription__r.Subscription_Status__c , &quot;In Renewal&quot;), 
ISPICKVAL(Subscription__r.Subscription_Status__c , &quot;Pending Cancellation&quot;),
ISPICKVAL(Subscription__r.Subscription_Status__c , &quot;Lapsed&quot;),
ISPICKVAL(Voucher_Activity_Action__c , &quot;Vouchers Received&quot;),
(AND(ISPICKVAL(Voucher_Activity_Action__c , &quot;Vouchers Sent&quot;),ISPICKVAL(Adjustment_Type__c , &quot;Voucher Send - Part Pack&quot;)))), False, True)
)</errorConditionFormula>
        <errorMessage>Vouchers can only be sent when the associated Subscription Status is Pending, Active, In Renewal, Lapsed or Pending Cancellation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Voucher_Dates_6Months_Outside_Subs_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(Start_Date__c &lt; Subscription__r.Start_Date__c - 178,
   End_Date__c &gt; Subscription__r.End_Date__c + 178),
ISPICKVAL(Voucher_Activity_Action__c , &quot;Vouchers Sent&quot;), 
ISPICKVAL(Adjustment_Type__c , &quot;Voucher Send - Part Pack&quot;) 
)</errorConditionFormula>
        <errorMessage>The voucher start date cannot be 6 months before the subscription start date or 6 months after subscription end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Voucher_Dates_Inside_Sub_Period</fullName>
        <active>true</active>
        <description>Voucher Resend - Part Pack can only be created with start and end date within the subscription period</description>
        <errorConditionFormula>AND( 
   OR(Start_Date__c &lt; Subscription__r.Start_Date__c,
   End_Date__c &gt; Subscription__r.End_Date__c),
   ISPICKVAL(Voucher_Activity_Action__c , &quot;Vouchers Sent&quot;), 
   ISPICKVAL(Adjustment_Type__c , &quot;Voucher Resend - Part Pack&quot;) 
)</errorConditionFormula>
        <errorMessage>You can only create a Voucher Resend - Part Pack within the Subscription Period.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Voucher_Dates_Outside_Subs_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
    OR(
       AND(Start_Date__c &gt;= Subscription__r.Start_Date__c,                  
           Start_Date__c &lt;= Subscription__r.End_Date__c), 
       AND(End_Date__c &gt;= Subscription__r.Start_Date__c, 
           End_Date__c &lt;= Subscription__r.End_Date__c) 
       ), 
    ISPICKVAL(Voucher_Activity_Action__c , &quot;Vouchers Sent&quot;), 
    ISPICKVAL(Adjustment_Type__c , &quot;Voucher Send - Part Pack&quot;) 
)</errorConditionFormula>
        <errorMessage>You can only create a Voucher Send - Part Pack outside of the Subscription Period.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Voucher_EndDate_Not_Greater_Sub_EndDate</fullName>
        <active>true</active>
        <description>Voucher End Date should be not greater than Subscription End Date</description>
        <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;TMG System&quot;),
    End_Date__c &gt;  Subscription__r.End_Date__c  , 
    NOT(ISPICKVAL( Voucher_Activity_Action__c, &apos;Vouchers Sent&apos;) ),
    ExecuteValidationRules__c
)</errorConditionFormula>
        <errorMessage>The voucher end date cannot be after the subscription end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Voucher_Start_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;TMG System&quot;),
    Start_Date__c &lt;  Subscription__r.Start_Date__c  , 
    NOT(ISPICKVAL( Voucher_Activity_Action__c, &apos;Vouchers Sent&apos;) ),
    ExecuteValidationRules__c
)</errorConditionFormula>
        <errorMessage>The voucher start date cannot be before the subscription start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Voucher_end_date_check</fullName>
        <active>true</active>
        <description>Checks the end date of a voucher activity isn&apos;t before the start date of the voucher activity.</description>
        <errorConditionFormula>End_Date__c&lt;Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date must be greater than the Start Date</errorMessage>
    </validationRules>
</CustomObject>